# prompt-evaluator

./: app_requirement_prompt.txt  main.py  pyproject.toml
exercises/one_shot_prompting/: description copy.md
src/: constants.py
src/templates/: index.html  layout.html
